--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./estilos/style.css">
-    <title>Tercera pre-entrega | JavaScript</title>
+    <title>Entrega Final | JavaScript</title>
 </head>
 <body class="">
     <header class="topheader">
@@ -16,8 +16,8 @@
             <a href="./index.html" class="logo">
                 <img src="./img/profile-cv1.png" alt="logo del perfil">
                 <div>
-                    Tercera<br>
-                    Pre entrega
+                    Entrega<br>
+                    Final
                 </div>
             </a>
             <button class="open-menu" aria-label="Abrir menú">
@@ -27,10 +27,17 @@
                 <button class="close-menu" aria-label="Cerrar menú">
                     <img src="./img/close-icon.svg" alt="cerrar menu">
                 </button>
-                <li><a href="./index.html" class="selected">Inicio</a></li>
+                <li>
+                    <a href="./index.html" class="selected">Inicio</a>
+                </li>
                 <li>
                     <a class="boton-menu boton-carrito" href="./carrito.html">
-                        <i class="bi bi-cart-fill"></i> Carrito  <span id="numerito" class="numerito">0</span>
+                        <i class="bi bi-cart-fill"></i>  <span id="numerito" class="numerito">0</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="boton-menu">
+                        <i id="form-open" class="btn-lg bi bi-person-circle"></i>
                     </a>
                 </li>
                 <!-- Btn darkMode -->
@@ -57,6 +64,28 @@
     <main>
 
         <div class="horizontal-padding vertical-padding">
+
+            <section class="home">
+                <div class="form_container">
+                    <i class="fa-solid fa-circle-xmark form_close"></i>
+                    
+                    <div class="form login_form">
+                        <form action="#">
+                            <h2>Bienvenido</h2>
+                            <div class="input_box">
+                                <input type="email" placeholder="Ingresa tu correo..." required />
+                                <i class="fa-regular fa-envelope fa-fade email"></i>
+                            </div>
+                            <div class="input_box">
+                                <input type="password" placeholder="Ingresa tu contraseña..." required />
+                                <i class="fa-solid fa-lock fa-fade password"></i>
+                                <i class="fa-solid fa-eye-slash pw_hide"></i>
+                            </div>
+                            <button class="button">Ingresar</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
 
             <div class="tituloGeneral">
                 <h1>Mayorista Margarita</h1>
@@ -140,6 +169,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/b74834922d.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="./js/login.js"></script>
     <script src="./js/darkMode.js"></script>
     <script src="./js/menu.js"></script>
     <script src="./js/main.js"></script>
