--- a/carrito.html
+++ b/carrito.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./estilos/style.css">
-    <title>Tercera pre-entrega | JavaScript</title>
+    <title>Entrega Final | JavaScript</title>
 </head>
 <body>
     <header class="topheader">
@@ -16,8 +16,8 @@
             <a href="./index.html" class="logo">
                 <img src="./img/profile-cv1.png" alt="logo del perfil">
                 <div>
-                    Tercera<br>
-                    Pre entrega
+                    Entrega<br>
+                    Final
                 </div>
             </a>
             <button class="open-menu" aria-label="Abrir menú">
