--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="textoProductosParrafo">
                         <p>Promociones exclusivas - Todas las tarjetas</p>
                     </div>
-                    <a target="_blank" href="https://www.google.com.ar/maps/place/Monse%C3%B1or+Tavella+1945,+E3202+Concordia,+Entre+R%C3%ADos/@-31.3729044,-58.0206992,17z/data=!4m5!3m4!1s0x95ade83afd4e5403:0x7926a50407bbcfa1!8m2!3d-31.3728952!4d-58.0204821?entry=ttu"><button class="btnCompra">Ver ubicación</button></a>
+                    <a target="_blank" href="./MARGARITA 06.07.pdf" download><button class="btnCompra">Descargar folleto</button></a>
                 </div>
                 <div class="imagenProductos">
                     <img src="./img/Margaritagif.gif" alt="">
