--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
     <div class="grupo1">
         <div class="cajaFooter">
             <figure>
-                    <a target="_blank" href="https://pkm-battles-1-1.netlify.app/">
+                    <a target="_blank" href="https://github.com/NicolasReschke/pokemon-battles-javascript">
                         <img src="./img/pikachu.gif" alt="">
                     </a>
                 </figure>
             </div>
             <div class="cajaFooter">
-                <a target="_blank" href="https://pkm-battles-1-1.netlify.app/"><h5 class="parrafoFooter">Pkm Battles</h5></a> 
-                <a target="_blank" href="https://pkm-battles-1-1.netlify.app/"><p class="parrafoFooter">Accede a la beta!!</p></a> 
+                <a target="_blank" href="https://github.com/NicolasReschke/pokemon-battles-javascript"><h5 class="parrafoFooter">Pkm Battles</h5></a> 
+                <a target="_blank" href="https://github.com/NicolasReschke/pokemon-battles-javascript"><p class="parrafoFooter">Accede a la beta!!</p></a> 
             </div>
             <div class="cajaFooter">
                 <h5>NUESTRAS REDES</h5>
