--- a/index.html
+++ b/index.html
@@ -10,7 +10,26 @@
     <link rel="stylesheet" href="./estilos/style.css">
     <title>Entrega Final | JavaScript</title>
 </head>
-<body class="">
+
+<body class="hidden">
+
+    <div class="centrado" id="onload">
+        <div class="lds-spinner">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+
     <header class="topheader">
         <nav class="topnav">
             <a href="./index.html" class="logo">
@@ -106,29 +125,46 @@
                 </div>
             </section>
             <hr>
-            <div>
-                <div class="menu2">
-                    <li>
-                        <button id="todos" class="btnCompra boton-menu boton-categoria active">Todas las ofertas</button>
-                    </li>
-                    <li>
-                        <button id="bebidas" class="btnCompra boton-menu boton-categoria">Bebidas</button>
-                    </li>
-                    <li>
-                        <button id="desayunoYMerienda" class="btnCompra boton-menu boton-categoria">Desayuno y Merienda</button>
-                    </li>
-                    <li>
-                        <button id="almacen" class="btnCompra boton-menu boton-categoria">Almacen</button>
-                    </li>
-                    <li>
-                        <button id="perfumeria" class="btnCompra boton-menu boton-categoria">Perfumeria</button>
-                    </li>
-                </div>
-            </div>
-            <div>
-                <input class="buscador" type="text" name="buscador" id="buscador" placeholder="Buscar producto...">
-            </div>
             
+                <div class="menu2">
+
+                    <div class="list-group">
+                        <div class="form-check">
+                            <input class="form-check-input boton-categoria" type="radio" name="flexRadioDefault" id="todos" checked>
+                            <label class="form-check-label" for="todos">
+                                Todas las ofertas
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input boton-categoria" type="radio" name="flexRadioDefault" id="bebidas">
+                            <label class="form-check-label" for="bebidas">
+                                Bebidas
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input boton-categoria" type="radio" name="flexRadioDefault" id="desayunoYMerienda">
+                            <label class="form-check-label" for="desayunoYMerienda">
+                                Desayuno y Merienda
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input boton-categoria" type="radio" name="flexRadioDefault" id="almacen">
+                            <label class="form-check-label" for="almacen">
+                                Almacen
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input boton-categoria" type="radio" name="flexRadioDefault" id="perfumeria">
+                            <label class="form-check-label" for="perfumeria">
+                                Perfumeria
+                            </label>
+                        </div>
+                    </div>
+
+                    <div>
+                        <input class="buscador" type="text" name="buscador" id="buscador" placeholder="Buscar producto...">
+                    </div>
+                </div>
             <hr>
 
             <div class="row row-cols-1 row-cols-md-4 g-4 cardBootstrap" id="cardBootstrap">
@@ -167,6 +203,7 @@
     <!-- footer -->
 
     <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/b74834922d.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
