--- a/carrito.html
+++ b/carrito.html
@@ -33,7 +33,7 @@
                         Seguir comprando
                     </a>
                 </li>
-                <li><a href="./carrito.html" class="selected">Carrito</a></li>
+                <li><a href="./carrito.html" class="selected">Pedido</a></li>
                 <!-- Btn darkMode -->
                 <li class="li-switch">
                     <button class="switch" id="switch">
@@ -57,10 +57,10 @@
     <main>
         <div class="horizontal-padding vertical-padding">
             <div class="tituloGeneral">
-                <h1>CARRITO</h1>
+                <h1>PEDIDO</h1>
             </div>
             <div class="contenedor-carrito">
-                <p id="carrito-vacio" class="carrito-vacio">Tu carrito está vacío.</p>
+                <p id="carrito-vacio" class="carrito-vacio">Tu pedido está vacío.</p>
 
                 <div id="carrito-productos" class="carrito-productos disabled">
                     
@@ -68,18 +68,18 @@
 
                 <div id="carrito-acciones" class="carrito-acciones disabled">
                     <div class="carrito-acciones-izquierda">
-                        <button id="carrito-acciones-vaciar" class="carrito-acciones-vaciar">Vaciar carrito</button>
+                        <button id="carrito-acciones-vaciar" class="carrito-acciones-vaciar">Eliminar pedido</button>
                     </div>
                     <div class="carrito-acciones-derecha">
                         <div class="carrito-acciones-total">
                             <p>Total:</p>
                             <p id="total">$0</p>
                         </div>
-                        <button id="carrito-acciones-comprar" class="carrito-acciones-comprar">Comprar ahora</button>
+                        <button id="carrito-acciones-comprar" class="carrito-acciones-comprar">Iniciar pedido</button>
                     </div>
                 </div>
 
-                <p id="carrito-comprado" class="carrito-comprado disabled">Muchas gracias por tu compra.</p>
+                <p id="carrito-comprado" class="carrito-comprado disabled">Muchas gracias por tu pedido.</p>
 
             </div>
         </div>
