--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
     </header>
 
     <main>
-
         <div class="horizontal-padding vertical-padding">
 
             <section class="home">
@@ -92,15 +91,15 @@
                         <form action="#">
                             <h2>Bienvenido</h2>
                             <div class="input_box">
-                                <input type="email" placeholder="Ingresa tu correo..." required />
+                                <input id="usuario" type="email" placeholder="Ingresa tu correo..." required/>
                                 <i class="fa-regular fa-envelope fa-fade email"></i>
                             </div>
                             <div class="input_box">
-                                <input type="password" placeholder="Ingresa tu contraseña..." required />
+                                <input id="password" type="password" placeholder="Ingresa tu contraseña..." required />
                                 <i class="fa-solid fa-lock fa-fade password"></i>
                                 <i class="fa-solid fa-eye-slash pw_hide"></i>
                             </div>
-                            <button class="button">Ingresar</button>
+                            <button id="ingresar" type="submit" class="button">Ingresar</button>
                         </form>
                     </div>
                 </div>
@@ -170,8 +169,7 @@
             <div class="row row-cols-1 row-cols-md-4 g-4 cardBootstrap" id="cardBootstrap">
                 
             </div>
-
-</main>
+    </main>
 
 <!-- footer -->
 <footer class="footerContainer">
@@ -207,7 +205,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/b74834922d.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/login.js"></script>
+    <script src="./js/usuarios.js"></script>
     <script src="./js/darkMode.js"></script>
     <script src="./js/menu.js"></script>
     <script src="./js/main.js"></script>
